# automata_theory

./: CMakeCache.txt  CMakeList.txt  CMakeLists.txt  Makefile  SMC_Recognizer.cpp  SMC_Recognizer.hpp  a.out  cmake_install.cmake  generator  generator.cpp  input.txt  main.cpp  out.txt  rec.hpp  recognizer.cpp  recognizer.hpp  recognizer.sm  recognizer_sm.cpp  recognizer_sm.dot  recognizer_sm.h  test
flex/: flex.l  flex_rec.hpp  input.txt  lex.yy.cc  main.cpp  rec.hpp  test_scanner
lab1/: README.md  SMC_Recognizer.cpp  SMC_Recognizer.hpp  generator  generator.cpp  main  main.cpp  rec.hpp  recognizer_sm.cpp  test
lab1/flex/: flex.l  flex_rec.hpp  lex.yy.c  lex.yy.cc  test_scanner
lab1/regex/: regex_rec.hpp
lab2/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  ast.hpp  bison.y  cmake_install.cmake  dfa.hpp  main.cpp  regex_lib.hpp  syntax_tree.hpp  test  test_lab2
lab2/tests/: catch2.cpp
lab3/: ast.cpp  ast.h  big_maze.txt  compile.txt  lab3  lab3.l  lab3.l.save  lab3.tab.c  lab3.tab.cc  lab3.tab.h  lab3.tab.hh  lab3.y  lex.yy.c  lex.yy.cc  maze.txt  maze.txt.save  nodes.h  p.txt  p_2.txt  prog.txt  robot.h  symbol_table.h  tree_parser.cpp  tree_parser.h  values.h
regex/: input.txt  regex  regex.cpp  regex_rec.hpp
